@@ -1,5 +1,8 @@
 2008-06-17  Sébastien Sablé  <sable@users.sourceforge.net>
 
+	* Sybase.py: Use ct_setparam to define ct_cursor parameters types
+	instead of ct_param
+	
 	* Sybase.py: Use CS_DATETIME_TYPE when passing CS_DATE_TYPE to
 	ct_setparam with NULLDATA to avoid a sybase limitation
 
